# lb

./: CMakeLists.txt  Header.h  initialization.cpp  main.cpp
GTest/: GTest.vcxproj  test.cpp
Math_func/: CMakeLists.txt  header_func.h  matrix1.cpp  matrix2.cpp
Math_func/Math_func/: Math_func.vcxproj  Math_func.vcxproj.filters
Math_func/Math_func/x64/Debug/: vc143.idb
Math_func/Math_func/x64/Debug/Math_func.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Math_func.lastbuildstate
TEST/: CMakeLists.txt  pch.h  test.cpp
main/: main.sln  main.vcxproj  main.vcxproj.filters
main/x64/Debug/: Math_func.idb  Math_func.lib  main.exe.recipe  main.vcxproj.FileListAbsolute.txt  vc143.idb
main/x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.lastbuildstate
